--- a/assignments/lesson-9/styles/style.css
+++ b/assignments/lesson-9/styles/style.css
@@ -1,15 +1,29 @@
 /* || general styles */
 
 html {
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Allerta Stencil', sans-serif;
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
     width: 800px;
     margin: 0 auto;
 }
 h1,
 h2 {
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Allerta Stencil', sans-serif;
 }
 
 /* header styles */
@@ -41,3 +55,11 @@ h2 {
     letter-spacing: -5px;
     margin-bottom: 10px;
 }
+
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a4b357+0,75890c+100;Olive+3D+%233 */
+background: #a4b357; /* Old browsers */
+background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #a4b357 0%,#75890c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
+
