--- a/assignments/lesson-9/styles/style.css
+++ b/assignments/lesson-9/styles/style.css
@@ -2,23 +2,9 @@
 
 html {
     font-family: 'Allerta Stencil', sans-serif;
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 body {
-    width: 800px;
+    width: 1000px;
     margin: 0 auto;
 }
 h1,
@@ -29,11 +15,11 @@ h2 {
 /* header styles */
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
 }
 header p {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: bold;
     text-align: center;
 }
@@ -51,15 +37,76 @@ section ul {
     margin-top: 0;
 }
 h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: -5px;
     margin-bottom: 10px;
 }
 
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a4b357+0,75890c+100;Olive+3D+%233 */
-background: #a4b357; /* Old browsers */
-background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #a4b357 0%,#75890c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
+.hexagon {
+  position: relative;
+  width: 100px; 
+  height: 57.74px;
+  margin: 28.87px 0;
+  background-image: url(https://thumbs.gfycat.com/DrearyCloudyCockerspaniel-max-1mb.gif);
+  background-size: auto 115.4701px;
+  background-position: center;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
 
+.hexTop,
+.hexBottom {
+  position: absolute;
+  z-index: 1;
+  width: 70.71px;
+  height: 70.71px;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 14.64px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+
+/*counter transform the bg image on the caps*/
+.hexTop:after,
+.hexBottom:after {
+  content: "";
+  position: absolute;
+  width: 100.0000px;
+  height: 57.73502691896258px;
+  -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  transform:          rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+.hexTop {
+  top: -35.3553px;
+}
+
+.hexTop:after {
+  background-position: center top;
+}
+
+.hexBottom {
+  bottom: -35.3553px;
+}
+
+.hexBottom:after {
+  background-position: center bottom;
+}
+
+.hexagon:after {
+  content: "";
+  position: absolute;
+  top: 0.0000px;
+  left: 0;
+  width: 100.0000px;
+  height: 57.7350px;
+  z-index: 2;
+  background: inherit;
+}
