--- a/assignments/Term Website Project/styles/main.css
+++ b/assignments/Term Website Project/styles/main.css
@@ -12,6 +12,7 @@ html {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 html {
     -webkit-text-size-adjust: none;
 }
@@ -19,43 +20,65 @@ html {
 /* BODY  */
 
 body {
-    background-image: url("https://i.imgur.com/M3CnpB8.jpg");
-    background-size: 100%;
+    background-repeat: repeat;
+    background-image: url('https://i.imgur.com/vlQtrod.jpg');
 }
+
+/* For width 400px and larger: */
+
+@media only screen and (min-width: 700px) {
+    body {
+        background-image: url('https://i.imgur.com/M3CnpB8.jpg');
+    }
+}
+
+
 
 /* HEADER  */
 
 header {}
+
 header h1 {
     font-size: 3rem;
     font-weight: 800;
-    color: #7C7C7C;
+    color: limegreen;
     text-shadow: 1px 1px 0px black;
     font-family: 'Permanent Marker', cursive;
+    padding: 5px
 }
+
 header img {
-display: inline-flex;
+    display: inline-flex;
 }
 
 /* NAVIGATION  */
 
 nav {}
+
 nav ul {}
+
 nav ul li {}
+
 nav ul li a {}
+
 nav ul li.active a {}
+
 nav ul li a:hover {
-    background-color: red;
+    background-color: limegreen;
 }
 
 /* MAIN  */
 
 main {}
+
 main h1 {}
+
 main h2 {}
+
 main figure {
     width: 100%;
 }
+
 main figure img {
     max-width: 100%;
     height: auto;
@@ -68,14 +91,16 @@ footer {
     margin: 1rem 0;
     clear: both;
     background-color: black;
-    
+    opacity: 0.7;
+
 }
+
 footer p {
     text-align: center;
-    padding: 0.5em;
+    padding: 1em;
     margin: 0;
     color: white;
-    font-size: .75rem;
+    font-size: 1rem;
 }
 
 /*----- grid con las imagenes -----*/
@@ -87,48 +112,58 @@ main.gallerycontainer {
     grid-gap: 2vw;
     margin: 7px;
 }
+
 main.gallerycontainer figure:hover {
     box-shadow: 3px 3px 3px #a2a0bb;
 }
+
 main.gallerycontainer figure {
     margin: 0;
     text-align: center;
     border-radius: 8px;
 }
+
 main.gallerycontainer figure img {
     width: 100%;
     border-radius: 7px;
 }
 
-/*----- OTHER -----*/
+/*----- grid con las imagenes -----*/
+
+/*----- Menu Accordion-----*/
 
 .accordion {
     background-color: #444;
     opacity: 0.7;
     color: white;
     cursor: pointer;
-    padding: 18px;
+    padding: 30px;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 20px;
     transition: 0.5s;
 }
+
 .active,
 .accordion:hover {
     background-color: #ccc;
 }
+
 .accordion:after {
     content: '\002B🚲';
-    color: #777;
+    color: limegreen;
     font-weight: bold;
     float: left;
     margin-left: 5px;
 }
+
 .active:after {
     content: "\2212🚴";
+
 }
+
 .panel {
     padding: 0 18px;
     background-color: white;
@@ -137,8 +172,85 @@ main.gallerycontainer figure img {
     transition: max-height 0.2s ease-out;
 }
 
-/*----- OTHER -----*/
+/*----- Menu Accordion-----*/
 
+/*----- Service -----*/
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: limegreen;
+    padding: 1px;
+}
+
+.grid-item {
+    background-color: whitesmoke;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 1px;
+    font-size: 15px;
+    text-align: center;
+}
+
+/*----- Service -----*/
+
+/*-----Videos-----*/
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/*-----Videos-----*/
+
+/*----- table -----*/
+
+table,
+th,
+td {
+    border: 1px solid limegreen;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 15px;
+    text-align: left;
+    width: 100%;
+    background-color: whitesmoke;
+}
+
+/*----- table -----*/
+
+/*----- slideshow -----*/
+
+#slideshow {
+    margin: 80px auto;
+    position: relative;
+    width: 800px;
+    height: 600px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+#slideshow > div {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+}
+
+/*----- slideshow -----*/
 
 /*----- The navigation: Force an Element To Self-Clear its Children -----*/
 
