--- a/assignments/Term Website Project/styles/main.css
+++ b/assignments/Term Website Project/styles/main.css
@@ -236,18 +236,21 @@ td {
 #slideshow {
     margin: 80px auto;
     position: relative;
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    height: auto;
     padding: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 #slideshow > div {
-    position: absolute;
+    position: relative;
     top: 10px;
     left: 10px;
     right: 10px;
     bottom: 10px;
+}
+img {
+    width: 100%;
+    height: auto;
 }
 
 /*----- slideshow -----*/
